# sunset-cam-firmware

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.example.json  dnsmasq-setup.conf  hostapd.conf
docs/: read-only-root.md
docs/hardware/: 2026-06-10-session-checkpoint-and-resume.md  2026-06-11-board-bringup-and-cross-project-coordination.md  2026-06-14-wifi-onboarding-bringup-runbook.md
docs/prototypes/: 2026-06-12-window-bracket-handoff.md  2026-06-12-window-bracket-prototype.jsx
scripts/: configure.sh  firstboot.sh  install.sh  overlay.sh  provision-unit.sh  run-setup-app.py  run-setup-server.py  setup-ap.sh  snap-now.sh  sunset-cam-deploy.sudoers
src/sunset_cam/: aiming_config.py  boot.py  capture.py  config.py  device_config.py  directive_executor.py  gyro_driver.py  heading.py  heartbeat.py  main.py  register.py  (+16 more)
systemd/: sunset-cam-aiming.service  sunset-cam-boot.service  sunset-cam-setup.service  sunset-cam-supervisor.service  sunset-cam.service
tests/: test_aiming_config.py  test_boot.py  test_config.py  test_device_config.py  test_directive_executor.py  test_entrypoints_smoke.py  test_gyro_driver.py  test_heading.py  test_heartbeat.py  test_orientation_sampler.py  test_placement_consume.py  test_placement_report.py  test_provision_client.py  test_register.py  test_service_control.py  test_setup_alignment.py  test_setup_app.py  test_setup_assets.py  test_setup_server.py  test_solstice_math.py  test_sticker.py  test_sun_detect.py  test_supervisor.py  test_upload.py  test_wifi_scan.py  test_wifi_setup.py  test_window.py
(+33 files in other folders)
