[project]
name = "sunset-cam"
version = "0.0.1"
description = "Firmware for the sunrise/sunset custom edge cameras (Tier 0)."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "smbus2>=0.4",
  "flask>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
